--- a/roles/jackett/files/jackett.service
+++ b/roles/jackett/files/jackett.service
@@ -9,8 +9,8 @@ RestartSec=5
 Type=simple
 User=jackett
 Group=media
-WorkingDirectory=/opt/apps/jackett/.appdata
-ExecStart=/bin/bash /opt/apps/jackett/.appdata/jackett_launcher.sh"
+WorkingDirectory=/opt/apps/jackett/.appdata/bin
+ExecStart=/bin/bash /opt/apps/jackett/.appdata/bin/jackett_launcher.sh"
 TimeoutStopSec=30
 
 [Install]
