--- a/roles/jackett/tasks/main.yml
+++ b/roles/jackett/tasks/main.yml
@@ -80,7 +80,7 @@
 - name: Reload systemd
   systemd:
     daemon_reload: yes
-  when: systemd.changed
+#  when: systemd.changed
 
 - name: Enable and Start jackett
   systemd:
