--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -111,6 +111,14 @@
     owner: yes
     group: yes
 
+- name: Network Template
+  template:
+    src: network.j2
+    dest: /etc/sysconfig/network
+    owner: root
+    group: root
+    mode: 0640
+
 - name: Upgrade all packages
   dnf:
     name: "*"
